
[workspace]
resolver = "3"
members = ["bikesafe-cli", "dfu-packager", "bikesafe-util"]
package.version = "2.8.0"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
simplelog = { version = "0.12", features = ["termcolor"] }
thiserror = "2.0"
