[package]
name = "bikesafe-cli"
version = "2.5.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dfu-core = { version = "0.7", features = ["std"] }
dfu-libusb = { version = "0.5"}
indicatif = "0.17"
rusb = "0.9"
simplelog = { workspace = true }
thiserror = { workspace = true }
