[package]
name = "bikesafe-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe ={ version = "0.31" }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
rfd = "0.15"
log = "0.4"
dfu-core = { version = "0.7", features = ["std"] }
dfu-libusb = { version = "0.5"}
rusb = "0.9"
